<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

     android:layout_width="match_parent"
     android:layout_height="match_parent"
      android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
      tools:context=".TemperatureConverter"
              android:backgroundTint="@android:color/holo_blue_light"
              android:weightSum="1">

    <TextView android:text="@string/heading"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="24dp"/>

     <TextView
        android:text="@string/convert_lcase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        />
    <EditText
        android:id="@+id/initial_input"
        android:text=" "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:maxWidth="2dp"
        android:textStyle="bold"
        android:textSize="24dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:text= "@string/from_to"
           android:padding="12dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"    />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"  >

    <RadioGroup
            android:id="@+id/left_from_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical" >

         <RadioButton
             android:id="@+id/left_celsius"
            android:text="@string/left_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <RadioButton
             android:id="@+id/left_fahrenheit"
            android:text="@string/left_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <RadioButton
             android:id="@+id/left_kelvin"
            android:text="@string/left_kelvin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <RadioButton
             android:id="@+id/left_rankin"
           android:text="@string/left_rankin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
       </RadioGroup>



       <RadioGroup
           android:id="@+id/right_to_group"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center_vertical">

                <RadioButton
                    android:id="@+id/right_celsius"
                    android:text="@string/right_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/right_fahrenheit"
                    android:text="@string/right_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                 <RadioButton
                     android:id="@+id/right_kelvin"
                    android:text="@string/right_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                 <RadioButton
                     android:id="@+id/right_rankin"
                    android:text="@string/right_rankin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
       </RadioGroup>

</RadioGroup>

        <Button
            android:id="@+id/convert_CAPS"
            android:text="CONVERT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/activity_horizontal_margin"/>


        <TextView
            android:id="@+id/result_text"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height= "wrap_content"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:padding="24dp"/>

        <TextView
            android:id="@+id/formula_text"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:typeface="serif"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_weight="0.29"
            android:textStyle="bold"
            android:padding="24dp"/>

    </LinearLayout>



